# bitset

./: CMakeLists.txt  LICENCE  README.md  bitset.h
include/: bitset.h
test/: CMakeLists.txt  test1.cpp
